# brain-dataset-forge

./: .env.example  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: chess-assistant-research.md  data-quality-playbook.md  environment-playgrounds.md  hugging-face-resources.md  opencode-go.md  research-map.md  training-handoff.md
examples/: transcript_lab.json
examples/chess_assistant/: README.md
examples/chess_assistant/adapters/smollm2_360m_chess_lora/: README.md  adapter_config.json  training_plan.json
examples/chess_assistant/adapters/smollm2_chess_lora/: README.md  adapter_config.json  training_plan.json
examples/chess_assistant/configs/: smollm2_lora_plan.json
examples/chess_assistant/data/: chess_assistant_eval.jsonl  chess_assistant_sft.jsonl  chess_assistant_train.jsonl  chess_dataset_manifest.json  chess_eval_suite.json
examples/chess_assistant/evals/: README.md  chess_elo_benchmark.json  chess_eval_report.json
scripts/: bootstrap_tools.py  chess_web_qa.js  report_qa.js
src/dataset_forge/: __init__.py  __main__.py  cli.py  config.py  exports.py  ingest.py  iterate.py  llm.py  models.py  quality.py  synth.py  train_configs.py  web.py
src/dataset_forge/chess_assistant/: __init__.py  cli.py  datasets.py  engine.py  eval.py  language.py  orchestrator.py  position.py  train.py  types.py  vision.py  web_app.py
tests/: test_chess_assistant.py  test_cli.py  test_config_and_generation.py  test_quality.py
(+1 files in other folders)
